[package]
name = "report_dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-query = "0.32.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "sql_compiler_bench"
harness = false
